// Copyright (c) Microsoft. All rights reserved.
// Licensed under the MIT license. See LICENSE file in the project root for full license information.

syntax = "proto3";

package BuildXL.Xldb.Proto;

option csharp_namespace = "BuildXL.Xldb.Proto";

enum SealDirectoryKind{
    SealDirectoryKind_UNSPECIFIED = 0;

    Full = 1;
    Partial = 2;
    SourceAllDirectories = 3;
    SourceTopDirectoryOnly = 4;
    Opaque = 5;
    SharedOpaque = 6;
}